# matplotlib-interactive-html

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: demo.py
matplotlib_interactive/: __init__.py  _version.py  cli.py  exporter.py  media.py  templates.py  theme.py
tests/: conftest.py  test_browser.py  test_export.py
